[package]
name = "rust-sketches"
version = "0.1.0"
edition = "2021"

[dependencies]  
anyhow = "1.0"

alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
#alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935", features = ["ws"]}
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-network = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy.git", rev = "cad7935" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "cad7935" }
alloy-sol-macro = "0.7.0"
alloy-sol-types = "0.7.0"
alloy-primitives = "0.7.0"
alloy-rlp = "0.3.4"

hex = "0.4.3"